fix tag wrapping

--- a/src/assets/sass/_global.scss
+++ b/src/assets/sass/_global.scss
@@ -94,6 +94,7 @@ p.lead {
 .tag-list {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
 }
 
 .tag {
